tests/ui/structured_unsupported.rs
use openrouter_toolkit::structured_model;

const MODEL: &str = structured_model!("openrouter/pareto-code");

fn main() {
    let _ = MODEL;
}
